--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,7 @@
 
 html {
   font-family: 'Noto Sans JP', sans-serif;
+
 }
 
 body {
@@ -33,9 +34,8 @@ body {
 }
 
 .container {
-  max-width: 575px;
+  max-width: 500px;
   margin: 0 auto;
-  padding: 0 1.5rem;
 }
 
 .row {
@@ -65,12 +65,7 @@ body {
     max-width: 1200px;
   }
 
-  .column-full,
   .column-half {
-    padding: 0 0.75rem;
-  }
-
-  .column-half {
-    width: 50%;
+    width: 45%;
   }
 }
